# cs77-final-project

./: .gitignore  README.md
cpp/: .gitignore  CMakeLists.txt
cpp/src/InOneWeekend/: main.cc
cpp/src/TheNextWeek/benchmark/: main.cc
cuda/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  camera.cuh  cmake_install.cmake  hittable.cuh  main.cu  out.ppm  randoms.cuh  ray.cuh  schedule.sh  sphere.cuh  vec3.cuh
cuda/advancedTracer/: camera.cuh  main.cu  ray.cuh
cuda/advancedTracer/materials/: dielectric.cuh  diffuse.cuh  iso.cuh  lambertian.cuh  material.cuh  metal.cuh
cuda/advancedTracer/objects/: aabb.cuh  aarect.cuh  box.cuh  bumpy_sphere.cuh  bvh_node.cuh  constant_medium.cuh  hittable.cuh  hittable_list.cuh  moving_sphere.cuh  sphere.cuh  translate.cuh
cuda/advancedTracer/texture/: image.cuh  noise.cuh
cuda/inOneWeekend/: main.cu  randoms.cuh  ray.cuh  vec3.cuh
cuda/inOneWeekend/materials/: dielectric.cuh  lambertian.cuh
cuda/inOneWeekend/objects/: hittable.cuh  sphere.cuh
cuda/inOneWeekend/sections/: section4.cu  section5.cu  working-materials.cu
cuda/inOneWeekendFloats/: camera.cuh  main.cu  vec3.cuh
cuda/inOneWeekendFloats/materials/: dielectric.cuh  lambertian.cuh  material.cuh  metal.cuh
cuda/inOneWeekendFloats/objects/: hittable.cuh  hittable_list.cuh  sphere.cuh
cuda/kmeans/: kmeans.cuh  main.cu
cuda/materials/: dielectric.cuh  material.cuh  metal.cuh
cuda/objects/: aabb.cuh  bvh_node.cuh  hittable.cuh  hittable_list.cuh
cuda/sections/: defocus-blur.cu  motion-blur.cu  section1.cu  section2.cu  section3.cu  section4.cu  section5.cu
cuda/theNextWeek/rest/: camera.cuh  main.cu  perlin.cuh  rtw_stb_image.cuh  vec3.cuh
cuda/theNextWeek/rest/materials/: diffuse.cuh  iso.cuh  lambertian.cuh  material.cuh
cuda/theNextWeek/rest/objects/: aabb.cuh  aarect.cuh  box.cuh  bumpy_sphere.cuh  bvh_node.cuh  constant_medium.cuh  hittable.cuh  hittable_list.cuh  sphere.cuh
cuda/theNextWeek/rest/texture/: checker.cuh  fBm.cuh  image.cuh  noise.cuh  solid_color.cuh  texture.cuh
cuda/theNextWeek/smarter-trees/: camera.cuh  vec3.cuh
cuda/theNextWeek/smarter-trees/materials/: lambertian.cuh
cuda/theNextWeek/smarter-trees/objects/: bvh_node.cuh  hittable_list.cuh
cuda/theNextWeek/tree/: .gitignore  camera.cuh  main.cu
cuda/theNextWeek/tree-unrolled/: main.cu
cuda/theNextWeek/tree-unrolled/objects/: hittable_list.cuh  sphere.cuh
cuda/theNextWeek/tree/objects/: bvh_node.cuh  moving_sphere.cuh
cuda/theNextWeek/unrolled-supersampling/objects/: bvh_node.cuh  hittable.cuh  hittable_list.cuh
